# QuickSort

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  vite.config.ts
.omo/run-continuation/: ses_0aeb145b4ffeqRF4KKWl6qrsyx.json  ses_0aed9396effeCtRaHvLfUrebtW.json  ses_0aed939a5ffe0qe3nk9u8v8Qve.json  ses_0aed978f0ffeqwRyhOnoJMNexa.json  ses_0aed994d0ffe9GpoDc0be8z7uE.json  ses_0aed9b2a6ffehsddzTDwTo8Vw7.json  ses_0af21c447ffeSYn44hEhz0jp2h.json
admin/: Cargo.toml  build.rs
admin/src/: main.rs
context-menu-dll/: Cargo.toml  build.rs  resources.rc
context-menu-dll/src/: icon.rs  lib.rs  shellext.rs
context-menu-dll/src/pipe_client/: client.rs  dispatcher.rs  error.rs  mod.rs  protocol.rs  transport.rs  win32_transport.rs
context-menu-dll/src/pipe_client/protocol/: codec.rs  envelope.rs  header.rs  mod.rs
context-menu-dll/src/pipe_client/transport/: mod.rs  named_pipe.rs  pipe_trait.rs  trait.rs
crates/quicksort-application/: Cargo.toml
crates/quicksort-application/src/: errors.rs  lib.rs
crates/quicksort-application/src/dtos/: mod.rs  operation_command.rs  operation_result.rs  pipe_command.rs
crates/quicksort-application/src/pipeline/: mod.rs
crates/quicksort-application/src/ports/: mod.rs  operation_repository.rs
crates/quicksort-application/src/ports/inbound/: execute_operation.rs  facade.rs  facade_impl.rs  get_folders.rs  manage_folders.rs  mod.rs  undo_operation.rs
crates/quicksort-application/src/ports/outbound/: clock.rs  configuration_repository.rs  conflict_resolver.rs  file_system.rs  id_generator.rs  mod.rs  operation_repository.rs
crates/quicksort-application/src/use_cases/: execute_operation.rs  get_folders.rs  manage_folders.rs  mod.rs  undo_operation.rs
crates/quicksort-application/tests/: execute_operation_tests.rs  mocks.rs  mod.rs
crates/quicksort-application/tests/scenarios/: mod.rs
crates/quicksort-application/tests/scenarios/execute_operation/: conflicts.rs  copy.rs  delete.rs  errors.rs  mod.rs  move.rs  rename.rs  undo.rs
crates/quicksort-domain/: Cargo.toml
crates/quicksort-domain/src/: lib.rs  operation.rs
crates/quicksort-domain/src/dtos/: mod.rs
crates/quicksort-domain/src/entities/: folder.rs  mod.rs  operation.rs
crates/quicksort-domain/src/errors/: mod.rs
crates/quicksort-domain/src/events/: mod.rs
crates/quicksort-domain/src/services/: mod.rs
crates/quicksort-domain/src/value_objects/: mod.rs  windows_path.rs
crates/quicksort-infrastructure/: Cargo.toml
crates/quicksort-infrastructure/src/: errors.rs  lib.rs
crates/quicksort-infrastructure/src/clock/: system_clock.rs
crates/quicksort-infrastructure/src/conflict_resolver/: default_resolver.rs  mod.rs
crates/quicksort-infrastructure/src/filesystem/: mod.rs  std_file_system.rs
crates/quicksort-infrastructure/src/id_generator/: uuid_generator.rs
crates/quicksort-infrastructure/src/repository/: in_memory_operation_repository.rs  json_configuration_repository.rs  json_operation_repository.rs  json_repository.rs  mod.rs
crates/quicksort-ipc-contract/: Cargo.toml
crates/quicksort-ipc-contract/src/: lib.rs
docs/: SPECIFICATION.md  decisions-log.md  implementation_plan.md  readme.md
docs/architecture/: domain-models.md  executable-specification.md  glossary.md  inbound-ports.md  vision.md
docs/specs/: execute-operation.md
docs/standards/: architecture_guard.py  code_guide.md  error-handling.md  evolution-roadmap.md  refactor_rules.md  rust-style.md  testing.md
docs/workspace/: audit-baseline.md  audit-issues.md  phase-0-preparation.md  phase-1-audit.md  phase-2-code-audit.md  phase-3-refactoring.md  phase-4-testing.md
pauldance/: .Sample_IContextMenu_ShellExtension.rs  Cargo.toml  activation.reg  lib.rs  manifest.xml  shellext.rs
src/: App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: activity_log.rs  commands.rs  config.rs  context_menu.rs  ipc_server.rs  lib.rs  logging.rs  main.rs  models.rs  move_engine.rs  pending.rs  state.rs
src-tauri/src/commands/: folders.rs  mod.rs  move.rs  move_cmd.rs  settings.rs
src-tauri/src/context_menu/: mod.rs  model.rs  registry.rs
src-tauri/src/folder/: repository.rs  service.rs
src-tauri/src/ipc/: framing.rs  mod.rs  protocol.rs  server.rs
src/components/: AddFolderButton.tsx  ApplyButton.tsx  FolderList.tsx  StatusIndicator.tsx
src/pages/: AboutPage.tsx  EditorPage.tsx  LogPage.tsx  SelectorPage.tsx  SettingsPage.tsx
src/styles/: global.css
src/types/: index.ts
tests/acceptance/: execute_operation.rs
tests/contract/: configuration_repository.rs
tests/integration/: execute_operation_integration.rs
tests/property/: move_operation.rs
