[workspace]
members = [
    "src-tauri",
    "context-menu-dll",
    "crates/quicksort-domain",
    "crates/quicksort-application",
    "crates/quicksort-ipc-contract",
    "crates/quicksort-infrastructure",
    "crates/quicksort-gui",
    "crates/quicksort-shell-extension"
]
resolver = "2"

[workspace.dependencies]
# External dependencies used across the workspace
async-trait = "0.1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "net", "macros"] }
windows = "0.61"
tauri = "2"
