[workspace]
members = [
    "src-tauri",
    "context-menu-dll",
    "crates/quicksort-domain",
    "crates/quicksort-application",
    "crates/quicksort-infrastructure",
    "crates/quicksort-ipc-contract",
]
resolver = "2"

[workspace.dependencies]
# External dependencies used across the workspace
async-trait = "0.1.89"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt", "net", "macros"] }
windows = "0.62.2"
tauri = "2.11.5"
