[package]
name = "quicksort-admin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "quicksort-admin"
path = "src/main.rs"

[dependencies]
quicksort = { path = "../src-tauri" }
anyhow = "1"
win-ctx = "1.4"
clap = { version = "4", features = ["derive"]}
serde_json = "1"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"