[package]
name = "context-menu-dll"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
quicksort = {path = "../src-tauri" }
log = "0.4"
simplelog = "0.12"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Registry",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }
windows-implement = "0.60.2"
windows-core = "0.62.2"
parking_lot = "0.12"
anyhow = "1"



[target.'cfg(windows)'.build-dependencies]
embed-resource = "3.0"


