[package]
name = "sample-shellext"
description = "Sample IContextMenu-based Windows Shell extension"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"

[lib]
crate-type = ["cdylib"]

[target.'cfg(windows)'.dependencies]
log = "0.4.27"
parking_lot = "0.12.4"
windows = { version = "0.61.3", features = [
    "Win32",
    "Win32_Graphics",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_GdiPlus",
    "Win32_System",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Registry",
    "Win32_System_SystemServices",
    "Win32_UI",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
] }
windows-core = "0.61.2"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "3.0.5"
