[package]
name = "quicksort"
version = "0.2.0"
description = "QuickSort – быстрая сортировка файлов"
authors = ["pr0math3us"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winreg = "0.56"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
directories = "6"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
win-ctx = "1.4.1"
windows = { version = "0.58", features = ["Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
quicksort-application = { path = "../crates/quicksort-application" }
quicksort-infrastructure = { path = "../crates/quicksort-infrastructure" }
quicksort-domain = { path = "../crates/quicksort-domain" }
dirs = "5"
tokio = { workspace = true, features = ["rt", "net", "time", "macros", "io-util"] }
