[package]
name = "quicksort-application"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
quicksort-domain = { path = "../quicksort-domain" }
serde = { version = "1", features = ["derive"] }
[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "sync", "rt-multi-thread"] }
anyhow = "1.0"
