[package]
name = "quicksort-infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
quicksort-domain = { path = "../quicksort-domain" }
quicksort-application = { path = "../quicksort-application" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
clock = "0.4.0"
id-generator = "0.3.0"
filesystem = "0.4.4"
uuid = { version = "1.23.4", features = ["v4"] }
tokio-fs = "0.2.0-alpha.6"
tokio = "1.52.3"
