[package]
name = "quicksort-infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
quicksort-domain = { path = "../quicksort-domain" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.23.4", features = ["v4"] }
tokio = { version = "1", features = ["full", "fs"] }
tempfile = "3"
anyhow = "1.0"
